# Machine-Learning-Labs

lab1/: Jtheta.m  linearRegression.m  plottheta.m  thetas.txt  苏博南_202000460020_实验一.md
lab10/: digit.m  linearSVM.m  nonLinear.m  show.m  strimage.m  strimage_test.m  tempCodeRunnerFile.m
lab10/tex/: main.aux  main.tex
lab11/: main.py  main.tex
lab2/: ex2.m  ex2_best_alpha.m  ex2_normal_equation.m  苏博南_202000460020_实验二.md
lab3/: ex3.m  ex3multi.m
lab3/tex/: main.aux  main.tex
lab4/: costJ.m  ex4.m
lab4/tex/: main.aux  main.tex
lab5/: sigmond.m  step1.m  step2.m
lab5/tex/: main.aux  main.tex
lab6/: 7-5-PCA.ipynb  7-6-PCA-in-scikit-learn.ipynb
lab6/tex/: main.aux  main.tex
lab7/Naive bayes/: Naive Bayes in scikit learn.ipynb  Naive Bayes in scratch and also in scikit learn.ipynb
lab7/tex/: main.aux  main.tex
lab9/: CHANGELOG.md  ex9.m  lab9.cabal
lab9/app/: Main.hs
lab9/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
lab9/tex/: main.aux  main.tex
